# VisualNovel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: character.cpp.0228AC26414A0260.idx  character.hpp.ADC35318CA07D9C0.idx  dialogue.cpp.13F1F51A0ACB22AF.idx  dialogue.cpp.3723D098FABAC907.idx  dialogue.hpp.9A113A3F7025971B.idx  dialogue.hpp.F9B978A709D5C084.idx  gui.cpp.BF39BADE4CBECF9B.idx  gui.hpp.989D061B1FA76F94.idx  main.cpp.054E48742BBE0881.idx  main.cpp.9F1F9496A67CAEBC.idx
src/: dialogue.cpp  dialogue.hpp  dialogue.json  main.cpp
